--- a/resources.html
+++ b/resources.html
@@ -198,7 +198,7 @@
           <div class="kicker">Breath • Stillness</div>
           <h3>Library</h3>
           <p>คลังแนวทางฝึก (Breath & Stillness) แบบย่อ ชัด ใช้ได้ในชีวิตจริง</p>
-          <a class="btn" href="resources-stillness.html">ไปที่ Library</a>
+          <a class="btn" href="resources-reset.html">ไปที่ Library</a>
         </div>
 
         <div class="card">
@@ -238,7 +238,7 @@
             <li>ทำซ้ำ 6 รอบ แล้ววางมือที่หัวใจ 10 วินาที</li>
           </ul>
           <div class="ctaRow">
-            <a class="btn primary" href="#">เปิดอ่าน/ดู</a>
+            <a class="btn primary" href="resources-breath.html">เปิดอ่าน/ดู</a>
             <a class="btn" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">ขอไฟล์ (LINE)</a>
           </div>
         </div>
@@ -253,7 +253,7 @@
             <li>เมื่อเผลอ ให้กลับมาที่สัมผัสมือ/เท้า</li>
           </ul>
           <div class="ctaRow">
-            <a class="btn primary" href="#">เปิดอ่าน/ดู</a>
+            <a class="btn primary" href="resources-stillness.html">เปิดอ่าน/ดู</a>
             <a class="btn" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">ขอไฟล์ (LINE)</a>
           </div>
         </div>
@@ -310,14 +310,14 @@
             <div class="kicker">A) Breath Reset</div>
             <h3>ชุดลมหายใจรีเซ็ต</h3>
             <p>แนวทางสั้นเพื่อคลายความตึง และทำให้ระบบประสาทกลับสู่โหมดที่นิ่งขึ้น</p>
-            <a class="btn" href="#">เปิดอ่าน/ดู</a>
+            <a class="btn" href="resources-stillness.html">เปิดอ่าน/ดู</a>
           </div>
 
           <div class="card">
             <div class="kicker">B) Stillness Practice</div>
             <h3>ชุดฝึกความนิ่ง</h3>
             <p>แนวทางฝึกแบบไม่เร่ง ไม่ฝืน เหมาะกับวันที่ใจต้องการพักอย่างแท้จริง</p>
-            <a class="btn" href="#">เปิดอ่าน/ดู</a>
+            <a class="btn" href="resources-stillness.html">เปิดอ่าน/ดู</a>
           </div>
 
           <div class="card">
