--- a/practices.html
+++ b/practices.html
@@ -223,7 +223,7 @@
             and does not replace medical or psychotherapy care.
 
             <div style="margin-top:12px;">
-              🔗 สำหรับผู้ที่สนใจโครงสร้างระบบการเรียนรู้และมาตรฐานการฝึกในระดับสถาบัน สามารถดูภาพรวมได้ที่<br>
+              🔗 สำหรับผู้ที่สนใจโครงสร้างระบบการเรียนรู้และมาตรฐานการฝึกในระดับ Certification Program สามารถดูภาพรวมได้ที่<br>
               For institutional-level structure and training standards, see:
               <a href="certification.html">KRUNIKI Certification Program</a>
             </div>
