--- a/resources-paths.html
+++ b/resources-paths.html
@@ -130,6 +130,15 @@
   <!-- ✅ MAIN (replaced only this part) -->
   <main class="wrap">
 
+<!-- ✅ Banner must be FIRST element in main -->
+    <div class="banner banner--practices" aria-label="KRUNIKI Practices Banner">
+      <img
+        src="assets/images/banners/resources-paths-banner.webp"
+        alt="KRUNIKI Practices — Breath, Stillness, Meditation"
+        loading="lazy"
+        decoding="async">
+    </div>
+    
      <section class="panel hero">
     <div class="heroGrid">
       <div class="heroText">
