--- a/resources.html
+++ b/resources.html
@@ -205,14 +205,14 @@
           <div class="kicker">Self-healing notes</div>
           <h3>Notes</h3>
           <p>บันทึกสั้นเชิงวิชาการ: ช่วยให้ “เรียกชื่อประสบการณ์” และดูแลตนเองได้อย่างมีกรอบ</p>
-          <a class="btn" href="#notes">ไปที่ Notes</a>
+          <a class="btn" href="resources-notes.html">ไปที่ Notes</a>
         </div>
 
         <div class="card">
           <div class="kicker">Choose by state</div>
           <h3>Recommended Paths</h3>
           <p>เลือกเส้นทางตามสภาวะปัจจุบัน พร้อมชุดเครื่องมือ 3 อย่างและปุ่มเริ่มต้น</p>
-          <a class="btn" href="#paths">ไปที่ Paths</a>
+          <a class="btn" href="resources-paths.html">ไปที่ Paths</a>
         </div>
       </div>
     </section>
@@ -268,7 +268,7 @@
             <li>สิ่งเล็ก ๆ ที่ฉันเลือกทำเพื่อดูแลตัวเอง (1 ข้อ)</li>
           </ul>
           <div class="ctaRow">
-            <a class="btn primary" href="#">เปิดอ่าน/ดู</a>
+            <a class="btn primary" href="resources-journal.html">เปิดอ่าน/ดู</a>
             <a class="btn" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">ขอไฟล์ (LINE)</a>
           </div>
         </div>
@@ -283,7 +283,7 @@
             <li>รับรู้ฝ่าเท้ากับพื้น 10 ลมหายใจ</li>
           </ul>
           <div class="ctaRow">
-            <a class="btn primary" href="#">เปิดอ่าน/ดู</a>
+            <a class="btn primary" href="resources-journal.html">เปิดอ่าน/ดู</a>
             <a class="btn" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">ขอไฟล์ (LINE)</a>
           </div>
         </div>
@@ -324,14 +324,14 @@
             <div class="kicker">C) Grounding</div>
             <h3>ชุด Grounding</h3>
             <p>ปิดการฝึกให้จบอย่างมั่นคง เหมาะกับคนไวต่อพลังงาน/ไวต่ออารมณ์</p>
-            <a class="btn" href="#">เปิดอ่าน/ดู</a>
+            <a class="btn" href="resources-stillness.html">เปิดอ่าน/ดู</a>
           </div>
 
           <div class="card">
             <div class="kicker">D) Emotional Soften</div>
             <h3>ชุดคลายอารมณ์อย่างอ่อนโยน</h3>
             <p>ช่วยให้ใจนุ่มลงโดยไม่กดอารมณ์ เหมาะกับคืนที่หนักหรือวันที่อัดแน่น</p>
-            <a class="btn" href="#">เปิดอ่าน/ดู</a>
+            <a class="btn" href="resources-stillness.html">เปิดอ่าน/ดู</a>
           </div>
         </div>
       </div>
@@ -350,28 +350,28 @@
             <div class="kicker">Heart Awareness</div>
             <h3>การรับรู้หัวใจ</h3>
             <p>แยก “ความคิด” ออกจาก “ความรู้สึก” เพื่อกลับมาเห็นความจริงของสภาวะภายในอย่างนุ่มนวล</p>
-            <a class="btn" href="#">เปิดอ่าน/ดู</a>
+            <a class="btn" href="resources-notes.html">เปิดอ่าน/ดู</a>
           </div>
 
           <div class="card">
             <div class="kicker">Emotional Naming</div>
             <h3>การเรียกชื่ออารมณ์</h3>
             <p>การตั้งชื่ออารมณ์อย่างเหมาะสมช่วยลดความฟุ้ง และเพิ่มการจัดระบบทางประสาทสัมผัส</p>
-            <a class="btn" href="#">เปิดอ่าน/ดู</a>
+            <a class="btn" href="resources-notes.html">เปิดอ่าน/ดู</a>
           </div>
 
           <div class="card">
             <div class="kicker">Daily Integration</div>
             <h3>การบูรณาการในชีวิตประจำวัน</h3>
             <p>ทำให้การฝึก “อยู่ในชีวิตจริง” ด้วยวิธีเล็ก ๆ ที่ทำซ้ำได้ ไม่ต้องพึ่งแรงใจมาก</p>
-            <a class="btn" href="#">เปิดอ่าน/ดู</a>
+            <a class="btn" href="resources-notes.html">เปิดอ่าน/ดู</a>
           </div>
 
           <div class="card">
             <div class="kicker">When to Pause</div>
             <h3>เมื่อไรควรพัก</h3>
             <p>การหยุดพักไม่ใช่ถอยหลัง—แต่เป็นทักษะสำคัญของการดูแลตัวเองอย่างมีจริยธรรม</p>
-            <a class="btn" href="#">เปิดอ่าน/ดู</a>
+            <a class="btn" href="resources-notes.html">เปิดอ่าน/ดู</a>
           </div>
         </div>
       </div>
@@ -397,7 +397,7 @@
             <li>Grounding checklist</li>
           </ul>
           <div class="ctaRow">
-            <a class="btn primary" href="#">เริ่มเส้นทาง</a>
+            <a class="btn primary" href="resources-notes.html">เริ่มเส้นทาง</a>
             <a class="btn" href="practices.html">ดู Practices</a>
           </div>
         </div>
@@ -411,7 +411,7 @@
             <li>Grounding (ปิดการฝึก)</li>
           </ul>
           <div class="ctaRow">
-            <a class="btn primary" href="#">เริ่มเส้นทาง</a>
+            <a class="btn primary" href="resources-notes.html">เริ่มเส้นทาง</a>
             <a class="btn" href="practices.html">ดู Practices</a>
           </div>
         </div>
@@ -425,7 +425,7 @@
             <li>Daily Integration</li>
           </ul>
           <div class="ctaRow">
-            <a class="btn primary" href="#">เริ่มเส้นทาง</a>
+            <a class="btn primary" href="resources-notes.html">เริ่มเส้นทาง</a>
             <a class="btn" href="practices.html">ดู Practices</a>
           </div>
         </div>
