--- a/services.html
+++ b/services.html
@@ -278,7 +278,7 @@
           <p class="pQuote">
             “กลับมารู้ตัวได้เร็วขึ้น” • “อารมณ์นิ่งขึ้นทีละน้อย” • “ตัดสินใจชัดขึ้น”
           </p>
-          <a class="btn btnSoftGold pBtn" href="service-private.html">อ่านรายละเอียด</a>
+          <a class="btn btnSoftGold pBtn" href="service-private-guidance.html">อ่านรายละเอียด</a>
         </div>
       </article>
 
