--- a/service-programs.html
+++ b/service-programs.html
@@ -131,155 +131,229 @@
   <main class="wrap">
 
   <!-- =========================
-    HERO — Services Overview
+    HERO — Programs & Services
   ========================= -->
   <section class="panel hero">
     <div class="heroGrid">
+
       <div class="heroText">
-        <div class="goldline">Services • KRUNIKI</div>
-        <h1>Structured Services for Inner Stability</h1>
+        <div class="goldline">Programs • Services ของ <strong>KRUNIKI</strong></div>
+        <h1>Structured Paths for Inner Stability</h1>
         <p class="lead">
-          หน้านี้นำเสนอภาพรวมของบริการภายใต้ KRUNIKI  
-          สำหรับผู้ที่ต้องการเริ่มต้นอย่างเป็นระบบ  
-          โดยยึดความปลอดภัย ความชัดเจน และการนำไปใช้ได้จริงในชีวิตประจำวัน
+          หน้านี้คือภาพรวมของบริการและเส้นทางการเรียนรู้ภายใต้ KRUNIKI<br>
+          ที่ออกแบบจากการทำงานจริงกับมนุษย์จริง<br>
+          โดยมีเป้าหมายเดียวกันคือ<br>
+          <strong>การพากลับมารับรู้ตัวเองอย่างมั่นคง และนำไปใช้ได้ในชีวิตจริง</strong>
         </p>
+
+        <div class="ctaRow">
+          <a class="btn primary" href="index.html#contact">ติดต่อ / เริ่มต้น</a>
+          <a class="btn" href="services.html">กลับหน้า Services</a>
+        </div>
       </div>
 
-      <div class="quoteCard" aria-label="Services principle">
+      <div class="quoteCard" aria-label="Programs principle">
         <div class="quoteTop">
           <div class="leftTitle">Principle</div>
           <div>KRUNIKI</div>
         </div>
         <p class="quote">
-          KRUNIKI ไม่ได้มุ่งเน้นการเปลี่ยนแปลงแบบเร่งรัด  
-          แต่ให้ความสำคัญกับการกลับมารับรู้ตนเองอย่างมั่นคง  
-          ผ่านโครงสร้างที่ชัดและจริยธรรมที่เหมาะสม
+          KRUNIKI ไม่ได้ทำงานกับ “แรงฮึดชั่วคราว”<br>
+          แต่ทำงานกับโครงสร้างภายในที่ทำให้คน<br>
+          กลับมาดูแลตัวเองได้อย่างต่อเนื่อง
+        </p>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- =========================
+    SECTION 1 — CORE SERVICE (MAIN)
+  ========================= -->
+  <section class="panel" style="margin-top:16px;">
+    <div class="resHead">
+      <h2>Core Service — เปิดให้บริการแล้ว</h2>
+      <div class="resTag">Primary Service</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        <div class="kicker">Main Service</div>
+        <h3>Heart Awakening — 20 Minutes Session</h3>
+
+        <p>
+          <strong>Heart Awakening 20 Minutes Session</strong>
+          คือบริการหลักของ KRUNIKI<br>
+          ใช้เป็น “จุดเริ่มต้น” สำหรับผู้ที่ต้องการกลับมารับรู้ตัวเองอย่างปลอดภัย
+          โดยไม่ต้องมีพื้นฐาน และไม่ต้องเปลี่ยนแปลงชีวิตทั้งระบบในทันที
+        </p>
+
+        <p>
+          เซสชันนี้ออกแบบจากประสบการณ์การทำงานจริง<br>
+          เพื่อช่วยให้ระบบประสาทและหัวใจ
+          <strong>กลับเข้าสู่สภาวะที่นิ่ง ชัด และรับรู้ได้</strong><br>
+          ภายในเวลาสั้น แต่มีผลต่อเนื่องในชีวิตประจำวัน
+        </p>
+
+        <div class="grid2" style="margin-top:12px;">
+          <div class="card">
+            <div class="kicker">เหมาะกับใคร</div>
+            <p>
+              ผู้ที่รู้สึกหลุดศูนย์ เหนื่อยทางใจ หรือสับสนทิศทางชีวิต<br>
+              ผู้ที่ต้องการเริ่มต้นดูแลตัวเองแบบไม่เร่ง ไม่ฝืน
+            </p>
+          </div>
+
+          <div class="card">
+            <div class="kicker">สิ่งที่เซสชันนี้ทำ</div>
+            <p>
+              พากลับมารับรู้ตัวเองผ่านสติ ความนิ่ง และลมหายใจ<br>
+              ไม่แก้ปัญหาแทน แต่สร้างฐานให้ดูแลตัวเองได้
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- =========================
+    SECTION 2 — PRIVATE GUIDANCE
+  ========================= -->
+  <section class="panel" style="margin-top:16px;">
+    <div class="resHead">
+      <h2>Private Guidance — การดูแลแบบเฉพาะบุคคล</h2>
+      <div class="resTag">One-on-One</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        <p>
+          Private Guidance คือการทำงานแบบหนึ่งต่อหนึ่ง<br>
+          สำหรับผู้ที่ต้องการพื้นที่ปลอดภัยในการทบทวนชีวิต
+          จัดวางภายใน และมองเห็นรูปแบบของตนเองอย่างชัดเจนขึ้น
+        </p>
+
+        <p>
+          การดูแลรูปแบบนี้ไม่ใช้สูตรสำเร็จ<br>
+          แต่ทำงานกับ <strong>บริบทจริงของแต่ละคน</strong><br>
+          โดยยึดหลักจริยธรรม ความเหมาะสม และขอบเขตที่ชัดเจน
+        </p>
+
+        <div class="grid2" style="margin-top:12px;">
+          <div class="card">
+            <div class="kicker">จุดเด่น</div>
+            <p>
+              ปรับตามจังหวะชีวิตจริงของผู้รับบริการ<br>
+              ไม่เร่ง ไม่กด และไม่ชี้นำเกินความจำเป็น
+            </p>
+          </div>
+
+          <div class="card">
+            <div class="kicker">ขอบเขต</div>
+            <p>
+              ไม่แทนการรักษาทางการแพทย์หรือจิตบำบัด<br>
+              และไม่อ้างผลลัพธ์เกินจริง
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- =========================
+    SECTION 3 — LONG-TERM PROGRAM (COMING SOON)
+  ========================= -->
+  <section class="panel" style="margin-top:16px;">
+    <div class="resHead">
+      <h2>Long-term Program — กำลังพัฒนา</h2>
+      <div class="resTag">Coming Within This Year</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        <h3>KRUNIKI Healing System™ — 8 Sessions Certification Program</h3>
+
+        <p>
+          โปรแกรมการเรียนรู้และการปฏิบัติระยะยาว
+          ภายใต้กรอบของ <strong>KRUNIKI SoulSync System™</strong><br>
+          ออกแบบเป็นเส้นทาง 8 Sessions ต่อเนื่อง 8–12 เดือน
+        </p>
+
+        <p>
+          โปรแกรมนี้เหมาะสำหรับผู้ที่ต้องการ
+          <strong>โครงสร้างภายในที่มั่นคง</strong><br>
+          และต้องการเรียนรู้การดูแลตนเองอย่างเป็นระบบในระยะยาว
+        </p>
+
+        <p class="small" style="margin-top:8px;">
+          โปรแกรมนี้ยังไม่เปิดรับสมัครในขณะนี้<br>
+          รายละเอียดเชิงลึกจะเผยแพร่เมื่อถึงช่วงเวลาที่เหมาะสม
         </p>
       </div>
     </div>
   </section>
 
   <!-- =========================
-    SECTION 1 — Core Program
+    SECTION 4 — ONLINE COURSES & PUBLIC LEARNING
   ========================= -->
-  <section class="panel">
+  <section class="panel" style="margin-top:16px;">
     <div class="resHead">
-      <h2>Core Program</h2>
-      <div class="resTag">KRUNIKI SoulSync System™</div>
+      <h2>Online Courses & Public Learning</h2>
+      <div class="resTag">In Development</div>
     </div>
 
     <div class="resBody">
-      <p>
-        KRUNIKI SoulSync System™ เป็นกรอบการเรียนรู้และการปฏิบัติ  
-        ที่ออกแบบมาเพื่อช่วยให้บุคคลกลับมาจัดวางชีวิตจากศูนย์กลางภายใน  
-        โดยใช้สติ ความนิ่ง และการรับรู้ตนเองเป็นฐาน
-      </p>
+      <div class="resBox">
+        <p>
+          KRUNIKI กำลังพัฒนาเนื้อหาออนไลน์และเครื่องมือการเรียนรู้<br>
+          สำหรับผู้ที่ต้องการฝึกด้วยตนเอง
+          ในรูปแบบที่ปลอดภัย ใช้งานได้จริง และไม่กดดัน
+        </p>
 
-      <p>
-        ระบบนี้ไม่ได้ออกแบบเป็นคอร์สระยะสั้น  
-        แต่เป็นเส้นทางที่ค่อย ๆ พัฒนาอย่างเป็นลำดับ  
-        เพื่อให้ผู้เรียนสามารถนำไปใช้ในชีวิตจริงได้อย่างต่อเนื่อง
-      </p>
+        <ul class="list" style="margin-top:10px;">
+          <li>คอร์สออนไลน์แบบ Self-paced</li>
+          <li>เครื่องมือฝึกสำหรับชีวิตประจำวัน</li>
+          <li>เนื้อหาเชิงการเรียนรู้สำหรับสาธารณะ</li>
+        </ul>
+      </div>
     </div>
   </section>
 
   <!-- =========================
-    SECTION 2 — Program Structure (Safe Overview)
+    SECTION 5 — HOW TO START
   ========================= -->
-  <section class="panel">
+  <section class="panel" style="margin-top:16px;">
     <div class="resHead">
-      <h2>Program Structure</h2>
-      <div class="resTag">8 Sessions • 8–12 Months</div>
+      <h2>How to Start</h2>
+      <div class="resTag">Practical Guidance</div>
     </div>
 
     <div class="resBody">
       <div class="grid2">
         <div class="card">
-          <div class="kicker">Phase I</div>
-          <h3>Re-Treat</h3>
-          <p>
-            การวางฐานให้ผู้เรียนกลับมารับรู้ตนเอง  
-            และสร้างความปลอดภัยภายในก่อนเริ่มกระบวนการเชิงลึก
-          </p>
+          <div class="kicker">เริ่มต้น</div>
+          <p>Heart Awakening — 20 Minutes Session</p>
         </div>
 
         <div class="card">
-          <div class="kicker">Phase II</div>
-          <h3>Re-Set</h3>
-          <p>
-            การจัดระบบการเรียนรู้และการปฏิบัติ  
-            เพื่อปรับสมดุลภายในและเชื่อมโยงกับชีวิตประจำวัน
-          </p>
+          <div class="kicker">ดูแลลึกขึ้น</div>
+          <p>Private Guidance</p>
         </div>
 
         <div class="card">
-          <div class="kicker">Phase III</div>
-          <h3>Re-Birth</h3>
-          <p>
-            การบูรณาการสิ่งที่เรียนรู้ทั้งหมด  
-            เพื่อให้ผู้เรียนสามารถดูแลตนเองได้อย่างมั่นคงในระยะยาว
-          </p>
+          <div class="kicker">ระยะยาว</div>
+          <p>Certification Program (Coming Soon)</p>
         </div>
 
         <div class="card">
-          <div class="kicker">Integration</div>
-          <h3>Closing Integration</h3>
-          <p>
-            การสรุปและจัดวางระบบที่ใช้งานซ้ำได้  
-            โดยไม่พึ่งพาผู้สอนอย่างต่อเนื่อง
-          </p>
+          <div class="kicker">เรียนรู้ต่อเนื่อง</div>
+          <p>Online Courses & Resources</p>
         </div>
       </div>
-    </div>
-  </section>
 
-  <!-- =========================
-    SECTION 3 — Ethics & Safety
-  ========================= -->
-  <section class="panel">
-    <div class="resHead">
-      <h2>Ethics and Safety</h2>
-      <div class="resTag">Public & Responsible Disclosure</div>
-    </div>
-
-    <div class="resBody">
-      <ul class="list">
-        <li>เนื้อหาบนเว็บไซต์เป็นข้อมูลเชิงภาพรวม ไม่เปิดเผยกระบวนการภายในเชิงลึก</li>
-        <li>ระบบนี้ไม่ทดแทนการรักษาทางการแพทย์หรือจิตบำบัด</li>
-        <li>การเข้าร่วมโปรแกรมขึ้นอยู่กับความพร้อมและการพิจารณาเป็นรายบุคคล</li>
-        <li>ให้ความสำคัญกับขอบเขต ความปลอดภัย และจริยธรรมของผู้เรียน</li>
-      </ul>
-    </div>
-  </section>
-
-  <!-- =========================
-    SECTION 4 — Next Step
-  ========================= -->
-  <section class="panel">
-    <div class="resHead">
-      <h2>Next Step</h2>
-      <div class="resTag">Certification Path</div>
-    </div>
-
-    <div class="resBody">
-      <p>
-        สำหรับผู้ที่ต้องการเส้นทางการเรียนรู้ที่ลึกและเป็นระบบมากขึ้น  
-        KRUNIKI มีโปรแกรมระยะยาวในรูปแบบ Certification  
-        ซึ่งออกแบบมาเพื่อการพัฒนาอย่างต่อเนื่องและมีจริยธรรม
-      </p>
-
-      <div class="ctaRow">
-        <a class="btn primary" href="certification.html">
-          View Certification Program
-        </a>
-        <a class="btn" href="index.html#contact">
-          Contact for Further Information
-        </a>
-      </div>
-
-      <p class="small">
-        * การตัดสินใจเข้าร่วมไม่จำเป็นต้องเกิดขึ้นทันที  
-        การทำความเข้าใจโครงสร้างและทิศทางถือเป็นก้าวแรกที่เพียงพอ
+      <p class="small" style="margin-top:14px;">
+        คุณไม่จำเป็นต้องพร้อมทั้งหมดในวันนี้<br>
+        แค่เริ่มจากจุดที่หัวใจรับไหว ก็เพียงพอแล้ว
       </p>
           </div>
         </div>
