--- a/service-programs.html
+++ b/service-programs.html
@@ -130,231 +130,279 @@
   <!-- ✅ MAIN (replaced only this part) -->
   <main class="wrap">
 
-  <!-- =========================
-    HERO — Programs & Services
-  ========================= -->
+  <!-- HERO -->
   <section class="panel hero">
     <div class="heroGrid">
 
       <div class="heroText">
-        <div class="goldline">Programs • Services ของ <strong>KRUNIKI</strong></div>
-        <h1>Structured Paths for Inner Stability</h1>
+        <div class="goldline">Programs • ภาพรวมโปรแกรมของ <strong>KRUNIKI</strong></div>
+        <h1>Programs — Structured Paths Under KRUNIKI SoulSync System™</h1>
+
         <p class="lead">
-          หน้านี้คือภาพรวมของบริการและเส้นทางการเรียนรู้ภายใต้ KRUNIKI<br>
-          ที่ออกแบบจากการทำงานจริงกับมนุษย์จริง<br>
-          โดยมีเป้าหมายเดียวกันคือ<br>
-          <strong>การพากลับมารับรู้ตัวเองอย่างมั่นคง และนำไปใช้ได้ในชีวิตจริง</strong>
+          หน้านี้สรุป “เส้นทางโปรแกรม” ของ KRUNIKI ในระดับสาธารณะ (Public Overview) —
+          เพื่อให้เห็นภาพรวมที่ชัดเจนว่าแต่ละบริการ/โปรแกรมทำหน้าที่อะไร
+          เหมาะกับใคร และควรเริ่มจากจุดไหน โดยคงหลักการ: ชัดเจน • ปลอดภัย • ใช้งานได้จริงในชีวิตประจำวัน
+          <br>
+          This page provides a public, structured overview of KRUNIKI programs for clear entry points and responsible expectations.
         </p>
 
         <div class="ctaRow">
-          <a class="btn primary" href="index.html#contact">ติดต่อ / เริ่มต้น</a>
+          <a class="btn primary" href="index.html#contact">ติดต่อเพื่อเริ่มต้น / นัดหมาย</a>
           <a class="btn" href="services.html">กลับหน้า Services</a>
+          <a class="btn" href="resources.html">ไปที่คลังความรู้</a>
         </div>
       </div>
 
-      <div class="quoteCard" aria-label="Programs principle">
+      <div class="quoteCard" aria-label="KRUNIKI program principle">
         <div class="quoteTop">
-          <div class="leftTitle">Principle</div>
-          <div>KRUNIKI</div>
+          <div class="leftTitle">Program Principle</div>
+          <div style="opacity:.8;">Academic • Clean • Grounded</div>
         </div>
         <p class="quote">
-          KRUNIKI ไม่ได้ทำงานกับ “แรงฮึดชั่วคราว”<br>
-          แต่ทำงานกับโครงสร้างภายในที่ทำให้คน<br>
-          กลับมาดูแลตัวเองได้อย่างต่อเนื่อง
+          KRUNIKI ออกแบบ “เส้นทาง” ไม่ใช่เพียงกิจกรรมแยกส่วน —
+          จุดเน้นคือการพัฒนาความสามารถในการดูแลตนเองอย่างต่อเนื่อง
+          ผ่านโครงสร้างการเรียนรู้ที่นำกลับไปใช้ซ้ำได้ในชีวิตจริง
         </p>
       </div>
 
     </div>
   </section>
 
-  <!-- =========================
-    SECTION 1 — CORE SERVICE (MAIN)
-  ========================= -->
+  <!-- PURPOSE + SAFETY -->
   <section class="panel" style="margin-top:16px;">
     <div class="resHead">
-      <h2>Core Service — เปิดให้บริการแล้ว</h2>
-      <div class="resTag">Primary Service</div>
+      <h2>Scope &amp; Safety Notice</h2>
+      <div class="resTag">Public information • Responsible use</div>
     </div>
 
     <div class="resBody">
       <div class="resBox">
-        <div class="kicker">Main Service</div>
-        <h3>Heart Awakening — 20 Minutes Session</h3>
-
-        <p>
-          <strong>Heart Awakening 20 Minutes Session</strong>
-          คือบริการหลักของ KRUNIKI<br>
-          ใช้เป็น “จุดเริ่มต้น” สำหรับผู้ที่ต้องการกลับมารับรู้ตัวเองอย่างปลอดภัย
-          โดยไม่ต้องมีพื้นฐาน และไม่ต้องเปลี่ยนแปลงชีวิตทั้งระบบในทันที
+        <p style="margin:0; line-height:1.9;">
+          เนื้อหาในหน้านี้เป็นข้อมูลเชิงการศึกษาและการแนะนำโปรแกรมในระดับสาธารณะ
+          เพื่อช่วยให้ผู้สนใจตัดสินใจได้อย่างเหมาะสม โดยไม่เปิดเผยรายละเอียดเฉพาะภายในระบบ
+          และไม่ทดแทนการดูแลทางการแพทย์หรือจิตบำบัด
+          <br>
+          This page is public-facing and does not replace medical or psychotherapy care.
         </p>
 
-        <p>
-          เซสชันนี้ออกแบบจากประสบการณ์การทำงานจริง<br>
-          เพื่อช่วยให้ระบบประสาทและหัวใจ
-          <strong>กลับเข้าสู่สภาวะที่นิ่ง ชัด และรับรู้ได้</strong><br>
-          ภายในเวลาสั้น แต่มีผลต่อเนื่องในชีวิตประจำวัน
-        </p>
+        <div style="height:10px"></div>
 
-        <div class="grid2" style="margin-top:12px;">
-          <div class="card">
-            <div class="kicker">เหมาะกับใคร</div>
-            <p>
-              ผู้ที่รู้สึกหลุดศูนย์ เหนื่อยทางใจ หรือสับสนทิศทางชีวิต<br>
-              ผู้ที่ต้องการเริ่มต้นดูแลตัวเองแบบไม่เร่ง ไม่ฝืน
-            </p>
-          </div>
-
-          <div class="card">
-            <div class="kicker">สิ่งที่เซสชันนี้ทำ</div>
-            <p>
-              พากลับมารับรู้ตัวเองผ่านสติ ความนิ่ง และลมหายใจ<br>
-              ไม่แก้ปัญหาแทน แต่สร้างฐานให้ดูแลตัวเองได้
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- =========================
-    SECTION 2 — PRIVATE GUIDANCE
-  ========================= -->
-  <section class="panel" style="margin-top:16px;">
-    <div class="resHead">
-      <h2>Private Guidance — การดูแลแบบเฉพาะบุคคล</h2>
-      <div class="resTag">One-on-One</div>
-    </div>
-
-    <div class="resBody">
-      <div class="resBox">
-        <p>
-          Private Guidance คือการทำงานแบบหนึ่งต่อหนึ่ง<br>
-          สำหรับผู้ที่ต้องการพื้นที่ปลอดภัยในการทบทวนชีวิต
-          จัดวางภายใน และมองเห็นรูปแบบของตนเองอย่างชัดเจนขึ้น
-        </p>
-
-        <p>
-          การดูแลรูปแบบนี้ไม่ใช้สูตรสำเร็จ<br>
-          แต่ทำงานกับ <strong>บริบทจริงของแต่ละคน</strong><br>
-          โดยยึดหลักจริยธรรม ความเหมาะสม และขอบเขตที่ชัดเจน
-        </p>
-
-        <div class="grid2" style="margin-top:12px;">
-          <div class="card">
-            <div class="kicker">จุดเด่น</div>
-            <p>
-              ปรับตามจังหวะชีวิตจริงของผู้รับบริการ<br>
-              ไม่เร่ง ไม่กด และไม่ชี้นำเกินความจำเป็น
-            </p>
-          </div>
-
-          <div class="card">
-            <div class="kicker">ขอบเขต</div>
-            <p>
-              ไม่แทนการรักษาทางการแพทย์หรือจิตบำบัด<br>
-              และไม่อ้างผลลัพธ์เกินจริง
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- =========================
-    SECTION 3 — LONG-TERM PROGRAM (COMING SOON)
-  ========================= -->
-  <section class="panel" style="margin-top:16px;">
-    <div class="resHead">
-      <h2>Long-term Program — กำลังพัฒนา</h2>
-      <div class="resTag">Coming Within This Year</div>
-    </div>
-
-    <div class="resBody">
-      <div class="resBox">
-        <h3>KRUNIKI Healing System™ — 8 Sessions Certification Program</h3>
-
-        <p>
-          โปรแกรมการเรียนรู้และการปฏิบัติระยะยาว
-          ภายใต้กรอบของ <strong>KRUNIKI SoulSync System™</strong><br>
-          ออกแบบเป็นเส้นทาง 8 Sessions ต่อเนื่อง 8–12 เดือน
-        </p>
-
-        <p>
-          โปรแกรมนี้เหมาะสำหรับผู้ที่ต้องการ
-          <strong>โครงสร้างภายในที่มั่นคง</strong><br>
-          และต้องการเรียนรู้การดูแลตนเองอย่างเป็นระบบในระยะยาว
-        </p>
-
-        <p class="small" style="margin-top:8px;">
-          โปรแกรมนี้ยังไม่เปิดรับสมัครในขณะนี้<br>
-          รายละเอียดเชิงลึกจะเผยแพร่เมื่อถึงช่วงเวลาที่เหมาะสม
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <!-- =========================
-    SECTION 4 — ONLINE COURSES & PUBLIC LEARNING
-  ========================= -->
-  <section class="panel" style="margin-top:16px;">
-    <div class="resHead">
-      <h2>Online Courses & Public Learning</h2>
-      <div class="resTag">In Development</div>
-    </div>
-
-    <div class="resBody">
-      <div class="resBox">
-        <p>
-          KRUNIKI กำลังพัฒนาเนื้อหาออนไลน์และเครื่องมือการเรียนรู้<br>
-          สำหรับผู้ที่ต้องการฝึกด้วยตนเอง
-          ในรูปแบบที่ปลอดภัย ใช้งานได้จริง และไม่กดดัน
-        </p>
-
-        <ul class="list" style="margin-top:10px;">
-          <li>คอร์สออนไลน์แบบ Self-paced</li>
-          <li>เครื่องมือฝึกสำหรับชีวิตประจำวัน</li>
-          <li>เนื้อหาเชิงการเรียนรู้สำหรับสาธารณะ</li>
+        <ul style="margin:0 0 0 18px; line-height:1.9;">
+          <li>หากมีภาวะฉุกเฉินด้านสุขภาพกาย/ใจ โปรดรับการดูแลจากผู้เชี่ยวชาญก่อน</li>
+          <li>การฝึกที่เกี่ยวข้องกับลมหายใจ/ภาวะจิตใจ ควรเริ่มจากระดับที่ปลอดภัยและควบคุมได้ด้วยตนเอง</li>
+          <li>KRUNIKI ยึดหลักจริยธรรม: เคารพขอบเขต ไม่อ้างผลลัพธ์เกินจริง และให้ความสำคัญกับความพร้อมของบุคคล</li>
         </ul>
       </div>
     </div>
   </section>
 
-  <!-- =========================
-    SECTION 5 — HOW TO START
-  ========================= -->
+  <!-- PROGRAM MAP -->
   <section class="panel" style="margin-top:16px;">
     <div class="resHead">
-      <h2>How to Start</h2>
-      <div class="resTag">Practical Guidance</div>
+      <h2>Program Map (Public Overview)</h2>
+      <div class="resTag">Core service • Private guidance • Upcoming programs</div>
     </div>
 
     <div class="resBody">
-      <div class="grid2">
-        <div class="card">
-          <div class="kicker">เริ่มต้น</div>
-          <p>Heart Awakening — 20 Minutes Session</p>
-        </div>
-
-        <div class="card">
-          <div class="kicker">ดูแลลึกขึ้น</div>
-          <p>Private Guidance</p>
-        </div>
-
-        <div class="card">
-          <div class="kicker">ระยะยาว</div>
-          <p>Certification Program (Coming Soon)</p>
-        </div>
-
-        <div class="card">
-          <div class="kicker">เรียนรู้ต่อเนื่อง</div>
-          <p>Online Courses & Resources</p>
-        </div>
+      <div class="resBox" style="margin-bottom:12px;">
+        <div class="kicker">How to read this page</div>
+        <p style="margin:8px 0 0; line-height:1.9;">
+          เพื่อความชัดเจน หน้านี้จัดเรียงโปรแกรมตาม “บทบาทการใช้งาน”:
+          <strong>บริการหลัก (Core Service)</strong> → <strong>การดูแลรายบุคคล (Private Guidance)</strong> → <strong>โปรแกรมระยะยาว (Certification Program — Upcoming)</strong> → <strong>คอร์สออนไลน์ (Coming Soon)</strong>.
+        </p>
       </div>
 
-      <p class="small" style="margin-top:14px;">
-        คุณไม่จำเป็นต้องพร้อมทั้งหมดในวันนี้<br>
-        แค่เริ่มจากจุดที่หัวใจรับไหว ก็เพียงพอแล้ว
-      </p>
+      <div class="grid2">
+        <!-- 1) Core -->
+        <div class="card">
+          <div class="kicker">Core Service</div>
+          <h3>Heart Awakening — 20 Minutes Session</h3>
+          <p>
+            บริการหลักของ KRUNIKI สำหรับการเริ่มต้นอย่างเป็นระบบ:
+            ช่วยพากลับสู่การรับรู้ตนเอง (Self-awareness) และสร้างฐานความปลอดภัยภายใน (Internal Safety)
+            ผ่านกระบวนการสั้น กระชับ และอยู่ในกรอบที่เหมาะกับชีวิตประจำวัน
+          </p>
+          <ul>
+            <li>เหมาะสำหรับผู้ที่ต้องการ “จุดเริ่มต้นที่ชัด” และวางฐานการดูแลตนเอง</li>
+            <li>เหมาะสำหรับผู้ที่ต้องการปรับสมดุล/จัดระเบียบภายในในช่วงที่ใจหนักหรือฟุ้ง</li>
+            <li>เป็นจุดเริ่มต้นที่สามารถต่อยอดไปสู่แนวทางอื่นของ KRUNIKI ได้</li>
+          </ul>
+          <div class="ctaRow" style="margin-top:12px;">
+            <a class="btn primary" href="service-20min.html">อ่านรายละเอียดบริการหลัก</a>
+            <a class="btn" href="index.html#contact">ติดต่อเพื่อนัดหมาย</a>
+          </div>
+        </div>
+
+        <!-- 2) Private -->
+        <div class="card">
+          <div class="kicker">Private Support</div>
+          <h3>Private Guidance</h3>
+          <p>
+            การดูแลรายบุคคลสำหรับผู้ที่ต้องการความต่อเนื่องเชิงโครงสร้าง
+            หรือมีบริบทชีวิตเฉพาะที่ควรได้รับการออกแบบแนวทางให้ “พอดี” กับสภาวะจริง
+            โดยยึดหลักความปลอดภัย ขอบเขตที่ชัด และความรับผิดชอบทางจริยธรรม
+          </p>
+          <ul>
+            <li>เหมาะกับผู้ที่ต้องการกรอบการฝึกและการติดตามแบบเป็นขั้นตอน</li>
+            <li>เหมาะกับผู้ที่ต้องการสะท้อน (reflection) และจัดระบบการปฏิบัติให้ต่อเนื่อง</li>
+            <li>เน้นการนำสิ่งที่เรียนรู้ไปใช้งานจริงในชีวิตประจำวัน</li>
+          </ul>
+          <div class="ctaRow" style="margin-top:12px;">
+            <a class="btn primary" href="services.html#private">ดูภาพรวม Private Guidance</a>
+            <a class="btn" href="index.html#contact">ติดต่อเพื่อสอบถาม</a>
+          </div>
+        </div>
+
+        <!-- 3) Certification -->
+        <div class="card">
+          <div class="kicker">Upcoming</div>
+          <h3>KRUNIKI Healing System™ — 8 Sessions Certification Program</h3>
+          <p>
+            โปรแกรมระยะยาวภายใต้กรอบ <strong>KRUNIKI SoulSync System™</strong>
+            ออกแบบเป็นเส้นทาง 8 Sessions เพื่อการเรียนรู้และการฝึกแบบเป็นลำดับ
+            พร้อมมาตรฐานด้านจริยธรรมและความปลอดภัยในการนำไปใช้
+          </p>
+          <ul>
+            <li><strong>สถานะ:</strong> เตรียมเปิดภายในปีนี้ — โปรดติดตามประกาศอย่างเป็นทางการ</li>
+            <li><strong>ขอบเขตสาธารณะ:</strong> แสดงภาพรวมและทิศทางเท่านั้น (ไม่เปิดรายละเอียดภายใน)</li>
+            <li><strong>แนวทาง:</strong> Structured learning • Practice • Integration</li>
+          </ul>
+
+          <div class="subPanel" style="margin-top:12px;">
+            <h2 style="margin:0 0 10px;">8 Sessions (Public Titles)</h2>
+            <ol style="margin:0; padding-left:18px; line-height:1.9;">
+              <li><strong>Heart Awakening</strong> — การปลุกหัวใจให้กลับมารับรู้</li>
+              <li><strong>Deep Forgiveness</strong> — การให้อภัยลึกเพื่อคืนอิสรภาพให้หัวใจ</li>
+              <li><strong>Healing the Inner Child</strong> — การเยียวยาเด็กในใจอย่างเป็นระบบ</li>
+              <li><strong>Healing the Body &amp; Energy Field</strong> — การดูแลร่างกายและสนามพลังที่สะสมบาดแผล</li>
+              <li><strong>Soul Maintenance</strong> — การบำรุงและตั้งรากการดูแลตนเองในชีวิตประจำวัน</li>
+              <li><strong>Soul Integration</strong> — การบูรณาการจิต–ร่าง–วิญญาณให้ทำงานร่วมกัน</li>
+              <li><strong>Soul Alignment</strong> — การจัดแนวชีวิตให้สอดคล้องกับความจริงภายใน</li>
+              <li><strong>Soul Completion Ceremony</strong> — การปิดวงและประกาศการเกิดใหม่ภายใน</li>
+            </ol>
+            <p class="small" style="margin-top:10px; opacity:.75;">
+              * รายละเอียดเชิงลึกของหลักสูตรและมาตรฐานการประเมิน จะประกาศในช่วงเปิดรับอย่างเป็นทางการ
+            </p>
+          </div>
+
+          <div class="ctaRow" style="margin-top:12px;">
+            <a class="btn" href="certification.html">ดูหน้า Certification (ภาพรวม)</a>
+            <a class="btn primary" href="index.html#contact">ลงทะเบียนรับข่าวสาร</a>
+          </div>
+        </div>
+
+        <!-- 4) Online courses -->
+        <div class="card">
+          <div class="kicker">Coming Soon</div>
+          <h3>Online Courses &amp; Digital Learning</h3>
+          <p>
+            KRUNIKI กำลังพัฒนาเส้นทางการเรียนรู้รูปแบบออนไลน์และสื่อประกอบการฝึก
+            เพื่อให้ผู้เรียนสามารถเข้าถึงการฝึกแบบเป็นระบบได้ในรูปแบบที่ยืดหยุ่น
+            และสอดคล้องกับชีวิตประจำวัน
+          </p>
+          <ul>
+            <li><strong>สถานะ:</strong> กำลังพัฒนา — โปรดติดตามที่เว็บไซต์และหน้าเพจ</li>
+            <li>เนื้อหาจะจัดเป็นหมวดหมู่ชัดเจน และเชื่อมต่อกับ Program Map ของ KRUNIKI</li>
+            <li>เน้นการฝึกที่ใช้งานได้จริง และมีแนวทางการดูแลความปลอดภัยที่ชัดเจน</li>
+          </ul>
+          <div class="ctaRow" style="margin-top:12px;">
+            <a class="btn primary" href="resources.html">เริ่มจากคลังความรู้</a>
+            <a class="btn" href="shop.html">ดูเครื่องมือฝึก (Shop)</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- START HERE -->
+  <section class="panel" style="margin-top:16px;">
+    <div class="resHead">
+      <h2>Start Here — Recommended Entry Point</h2>
+      <div class="resTag">Clear starting step • Minimal confusion</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        <p style="margin:0; line-height:1.9;">
+          หากคุณยังไม่แน่ใจว่าจะเริ่มจากจุดไหน —
+          จุดเริ่มต้นที่เหมาะสมที่สุดของ KRUNIKI คือ
+          <strong>Heart Awakening — 20 Minutes Session</strong>
+          เพราะเป็นบริการที่ออกแบบมาเพื่อวางฐานการรับรู้ตนเองและความปลอดภัยภายใน
+          ในระยะเวลาที่ชัดเจนและใช้งานได้จริง
+        </p>
+
+        <div class="grid2" style="margin-top:14px;">
+          <div class="card">
+            <div class="kicker">When to begin</div>
+            <h3>เริ่มเมื่อคุณต้องการความชัดและความนิ่ง</h3>
+            <p>
+              เหมาะกับช่วงที่ต้องการ “กลับมารับรู้ตัวเอง” ให้ชัดขึ้น
+              ต้องการจัดระเบียบภายใน และต้องการจุดเริ่มต้นที่ไม่ซับซ้อน
+            </p>
+          </div>
+          <div class="card">
+            <div class="kicker">Expected outcomes</div>
+            <h3>ผลลัพธ์ที่คาดหวัง (ระดับเหมาะสม)</h3>
+            <p>
+              ความนิ่งเพิ่มขึ้น • ความชัดในการรับรู้ตนเอง • แนวทางฝึกต่อที่เหมาะกับบริบทชีวิต
+              (ผลลัพธ์แตกต่างตามบุคคล และขึ้นกับการดูแลต่อเนื่อง)
+            </p>
+          </div>
+        </div>
+
+        <div class="ctaRow" style="margin-top:14px;">
+          <a class="btn primary" href="service-20min.html">ไปที่ Heart Awakening 20 Minutes</a>
+          <a class="btn" href="index.html#contact">ติดต่อเพื่อนัดหมาย</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ETHICS -->
+  <section class="panel" style="margin-top:16px;">
+    <div class="resHead">
+      <h2>Ethics &amp; Boundaries</h2>
+      <div class="resTag">Professional scope • Responsible communication</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        <ul style="margin:0 0 0 18px; line-height:1.9;">
+          <li>KRUNIKI ไม่แทนการรักษาทางการแพทย์หรือจิตบำบัด และไม่ให้คำวินิจฉัยโรค</li>
+          <li>การดูแลทั้งหมดเน้นความปลอดภัย ความเหมาะสมรายบุคคล และการตัดสินใจที่รับผิดชอบ</li>
+          <li>รายละเอียดเชิงลึกของโปรแกรมระยะยาวจะสื่อสารตามขั้นตอนที่เหมาะสม เพื่อรักษามาตรฐานและความเป็นส่วนตัว</li>
+        </ul>
+        <p class="small" style="margin-top:10px; opacity:.75;">
+          หากมีอาการรุนแรงหรือภาวะฉุกเฉิน โปรดติดต่อบริการฉุกเฉินหรือผู้เชี่ยวชาญที่เกี่ยวข้องในพื้นที่ของคุณทันที
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- CLOSING CTA -->
+  <section class="panel" style="margin-top:16px;">
+    <div class="resHead">
+      <h2>Next Step</h2>
+      <div class="resTag">Contact • Follow updates</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        <p style="margin:0; line-height:1.9;">
+          หากคุณต้องการเริ่มต้นแบบชัดเจน:
+          เริ่มจาก <strong>Heart Awakening — 20 Minutes Session</strong>
+          แล้วค่อยประเมินว่าควรต่อยอดไปที่ Private Guidance, Tools, หรือเส้นทางโปรแกรมอื่นในลำดับถัดไป
+        </p>
+
+        <div class="ctaRow" style="margin-top:14px;">
+          <a class="btn primary" href="index.html#contact">ติดต่อเพื่อเริ่มต้น</a>
+          <a class="btn" href="service-20min.html">อ่านบริการหลัก</a>
+          <a class="btn" href="resources.html">เริ่มจากคลังความรู้</a>
+        </div>
+
+        <p class="small" style="margin-top:12px; opacity:.75;">
+          สำหรับประกาศการเปิดรับโปรแกรมใหม่ (Certification / Online Courses) โปรดติดตามที่เว็บไซต์และหน้าเพจของ KRUNIKI
+        </p>
           </div>
         </div>
       </div>
