--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
   <link rel="stylesheet" href="assets/css2/pages/index2.css">
   <link rel="stylesheet" href="assets/css2/fixes/99_hotfix.css">
   <link rel="stylesheet" href="assets/css2/fixes/98_final_polish.css">
+  <!-- ✅ เพิ่ม (STEP 3) -->
+<link rel="stylesheet" href="assets/nav-patch.css">
+
   <script src="assets/main.js" defer></script>
+  <!-- ✅ เพิ่ม (STEP 1) ต้องอยู่หลัง main.js -->
+<script src="assets/nav-patch.js" defer></script>
 </head>
   
 <body class="page--index2">
