--- a/shop.html
+++ b/shop.html
@@ -22,7 +22,14 @@
 
   <!-- เฉพาะหน้า shop -->
 <link rel="stylesheet" href="assets/css2/pages/shop.css">
+  
+ <!-- ✅ เพิ่ม (STEP 3) -->
+<link rel="stylesheet" href="assets/nav-patch.css">
+
   <script src="assets/main.js" defer></script>
+  <!-- ✅ เพิ่ม (STEP 1) ต้องอยู่หลัง main.js -->
+<script src="assets/nav-patch.js" defer></script>
+  
 </head>
   
 <body class="page--shop shopPage">
