--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -26,8 +26,13 @@
 
   <!-- Product page specific -->
 <link rel="stylesheet" href="assets/css2/pages/shop-ebook-package.css">
-
+  
+<!-- ✅ เพิ่ม (STEP 3) -->
+<link rel="stylesheet" href="assets/nav-patch.css">
+  
   <script src="assets/main.js" defer></script>
+<!-- ✅ เพิ่ม (STEP 1) ต้องอยู่หลัง main.js -->
+<script src="assets/nav-patch.js" defer></script>
 </head>
   
 <body class="page--shop-ebook">
